--- a/orgnest.cabal
+++ b/orgnest.cabal
@@ -83,6 +83,7 @@ common shared
     , filepath
     , mtl
     , optics-core
+    , org-parser
     , profunctors
     , relude        >=1.0
     , shower
